--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # run jupyter notebook inside jupyter 
   jupyter-notebook:
-    image:  ttimbers/dsci-522-individual-assignment-quarto-python:92da461
+    image:  hugokwok0119/dsci-522-individual-assignment-quarto-python
     ports:
       - "8888:8888"
     volumes:
